navbar padding left and right corrected. text background changed and text overflow added.

--- a/css/app.css
+++ b/css/app.css
@@ -8138,8 +8138,8 @@ body {
   body .navigation {
     height: 50px;
     width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 4px;
     padding-bottom: 4px; }
     body .navigation #logo {
@@ -8169,7 +8169,7 @@ body {
     cursor: pointer; }
     body .main-content .carousel-caption span {
       cursor: default;
-      background-color: #7f8c8d; }
+      background-color: rgba(0, 0, 0, 0.38); }
     @media (min-width: 921px) and (max-width: 1000px) {
       body .main-content .carousel-caption h1 {
         font-size: 30px; } }
@@ -8184,7 +8184,7 @@ body {
         font-size: 15px; } }
     @media (max-width: 387px) {
       body .main-content .carousel-caption h1 {
-        font-size: 12px; } }
+        display: none; } }
   body .btn-file-form {
     cursor: pointer; }
     body .btn-file-form #display-file-form {
@@ -8246,6 +8246,22 @@ body {
     margin-right: 0px; }
   body .inscription img, body .logement img {
     width: 100%; }
+  body .inscription .text, body .logement .text {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    font-size: 20px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.38);
+    overflow: hidden;
+    text-overflow: ellipsis; }
+    @media (min-width: 388px) and (max-width: 497px) {
+      body .inscription .text, body .logement .text {
+        font-size: 15px; } }
+    @media (max-width: 387px) {
+      body .inscription .text, body .logement .text {
+        font-size: 12px; } }
   body .inscription #left-block, body .logement #left-block {
     padding-left: 0px;
     padding-right: 0px; }
@@ -8257,23 +8273,12 @@ body {
       color: #fff;
       letter-spacing: 1px; }
       body .inscription #left-block #top .text, body .logement #left-block #top .text {
-        position: absolute;
         bottom: 5%;
-        left: 50%;
         max-height: 50%;
-        transform: translate(-50%, -50%);
         text-align: center;
-        font-size: 20px;
         padding-left: 4px;
         padding-right: 4px;
-        background-color: #7f8c8d;
         cursor: default; }
-        @media (min-width: 388px) and (max-width: 497px) {
-          body .inscription #left-block #top .text, body .logement #left-block #top .text {
-            font-size: 15px; } }
-        @media (max-width: 387px) {
-          body .inscription #left-block #top .text, body .logement #left-block #top .text {
-            font-size: 12px; } }
     body .inscription #left-block #bottom1, body .inscription #left-block #bottom2, body .logement #left-block #bottom1, body .logement #left-block #bottom2 {
       padding: 5px 5px 0 5px; }
   body .inscription #right-block, body .logement #right-block {
@@ -8284,23 +8289,10 @@ body {
       body .inscription #right-block, body .logement #right-block {
         padding-top: 10px; } }
     body .inscription #right-block .text, body .logement #right-block .text {
-      position: absolute;
       opacity: 0;
       top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
       max-height: 80%;
-      text-align: center;
-      font-size: 20px;
-      color: #fff;
-      background-color: #7f8c8d; }
-      @media (min-width: 388px) and (max-width: 497px) {
-        body .inscription #right-block .text, body .logement #right-block .text {
-          font-size: 15px; } }
-      @media (max-width: 387px) {
-        body .inscription #right-block .text, body .logement #right-block .text {
-          font-size: 12px; } }
+      text-align: justify; }
     body .inscription #right-block .logo, body .logement #right-block .logo {
       position: absolute;
       opacity: 1;
@@ -8312,7 +8304,8 @@ body {
   body .inscription #right-block:hover .text, body .logement #right-block:hover .text {
     opacity: 1; }
   body .inscription #right-block:hover .image, body .logement #right-block:hover .image {
-    opacity: 0.3; }
+    opacity: 0.4;
+    z-index: -1; }
   body .inscription #right-block:hover .logo, body .logement #right-block:hover .logo {
     opacity: 0; }
   body #buttons {
